--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>WebStudio</title>
+    <title lang="en">WebStudio</title>
   </head>
   <body>
     <header>
       <nav>
-        <a href="./index.html"> WebStudio </a>
+        <a href="./index.html" lang="en"> WebStudio </a>
         <ul>
           <li><a href="#">Студія</a></li>
           <li><a href="#">Портфоліо</a></li>
@@ -144,18 +144,18 @@
       </section>
     </main>
     <footer>
-      <a href="./index.html"> WebStudio </a>
+      <a href="./index.html" lang="en"> WebStudio </a>
       <address>
         <p>м. Київ, пр-т Лесі Українки, 26</p>
+        <ul>
+          <li>
+            <a href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li>
+            <a href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
       </address>
-      <ul>
-        <li>
-          <a href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li>
-          <a href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
     </footer>
   </body>
 </html>
