--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <nav>
         <a href="./index.html" lang="en"> WebStudio </a>
         <ul>
-          <li><a href="#">Студія</a></li>
+          <li><a href="./index.html">Студія</a></li>
           <li><a href="#">Портфоліо</a></li>
           <li><a href="#">Контакти</a></li>
         </ul>
@@ -34,31 +34,20 @@
         <h2>Особливості</h2>
         <ul>
           <li>
-            <h3>УВАГА ДО ДЕТАЛЕЙ</h3>
-            <p>
-              Ідейні міркування, і навіть початок повсякденної роботи з
-              формування позиції.
-            </p>
+            <h3>Увага до деталей</h3>
+            <p>Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
           </li>
           <li>
-            <h3>ПУНКТУАЛЬНІСТЬ</h3>
-            <p>
-              Завдання організації, особливо рамки і місце навчання кадрів тягне
-              у себе.
-            </p>
+            <h3>Пунктуальнысть</h3>
+            <p>Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
           </li>
           <li>
-            <h3>ПЛАНУВАННЯ</h3>
-            <p>
-              Так само консультація з широким активом значною мірою зумовлює.
-            </p>
+            <h3>Планування</h3>
+            <p>Так само консультація з широким активом значною мірою зумовлює.</p>
           </li>
           <li>
-            <h3>СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-            <p>
-              Значимість цих проблем настільки очевидна, що реалізація планових
-              завдань.
-            </p>
+            <h3>Сучасны технології</h3>
+            <p>Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
           </li>
         </ul>
       </section>
@@ -66,34 +55,18 @@
         <h2>Чим ми займаємося</h2>
         <ul>
           <li>
-            <a href="#">
-              <img
-                src="./images/box_1.jpg"
-                alt="Написання коду"
-                width="370"
-                height="294"
-              />
-            </a>
+            <img src="./images/box_1.jpg" alt="Написання коду" width="370" height="294" />
           </li>
           <li>
-            <a href="#">
-              <img
-                src="./images/box_2.jpg"
-                alt="Розробка для мобільних телефонів"
-                width="370"
-                height="294"
-              />
-            </a>
+            <img
+              src="./images/box_2.jpg"
+              alt="Розробка для мобільних телефонів"
+              width="370"
+              height="294"
+            />
           </li>
           <li>
-            <a href="#">
-              <img
-                src="./images/box_3.jpg"
-                alt="Підбір кольору"
-                width="370"
-                height="294"
-              />
-            </a>
+            <img src="./images/box_3.jpg" alt="Підбір кольору" width="370" height="294" />
           </li>
         </ul>
       </section>
@@ -101,22 +74,12 @@
         <h2>Наша команда</h2>
         <ul>
           <li>
-            <img
-              src="./images/img_Игорь.jpg"
-              alt="Ігор Дем'яненко"
-              width="270"
-              height="260"
-            />
+            <img src="./images/img_Игорь.jpg" alt="Ігор Дем'яненко" width="270" height="260" />
             <h3>Ігор Дем'яненко</h3>
             <p lang="en">Product Designer</p>
           </li>
           <li>
-            <img
-              src="./images/img_Ольга_Рєпіна.jpg"
-              alt="Ольга Рєпіна"
-              width="270"
-              height="260"
-            />
+            <img src="./images/img_Ольга_Рєпіна.jpg" alt="Ольга Рєпіна" width="270" height="260" />
             <h3>Ольга Рєпіна</h3>
             <p lang="en">Frontend Developer</p>
           </li>
@@ -146,8 +109,15 @@
     <footer>
       <a href="./index.html" lang="en"> WebStudio </a>
       <address>
-        <p>м. Київ, пр-т Лесі Українки, 26</p>
         <ul>
+          <li>
+            <a
+              href="https://goo.gl/maps/BVRUFuVAuVkGGyoq6"
+              target="_blank"
+              rel="noreferrer noopener"
+              >м. Київ, пр-т Лесі Українки, 26</a
+            >
+          </li>
           <li>
             <a href="mailto:info@devstudio.com">info@devstudio.com</a>
           </li>
