добавила ещё одно значение в rel

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
             <a
               href="https://goo.gl/maps/BVRUFuVAuVkGGyoq6"
               target="_blank"
-              rel="noreferrer noopener"
+              rel="noopener noreferrer nofollow"
               >м. Київ, пр-т Лесі Українки, 26</a
             >
           </li>
